--- a/Instruksi_Perulangan.ipynb
+++ b/Instruksi_Perulangan.ipynb
@@ -6,7 +6,7 @@
       "name": "Instruksi Perulangan",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+O5saSWHoktH80S/bnIwe",
+      "authorship_tag": "ABX9TyPZiA0TCHo4aKhlpDbp991e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,10 +84,10 @@
         "b= 3\n",
         " \n",
         "While (a >= b )\n",
-        "a = a Mod b\n",
+        "  a = a Mod b\n",
         "End While\n",
         "\n",
-        "Console.whriteln(\"555 Mod 3 = {0} \", a)"
+        "Console.writeln(\"555 Mod 3 = {0} \", a)"
       ],
       "execution_count": null,
       "outputs": []
