--- a/Instruksi_Perulangan.ipynb
+++ b/Instruksi_Perulangan.ipynb
@@ -6,7 +6,7 @@
       "name": "Instruksi Perulangan",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPZiA0TCHo4aKhlpDbp991e",
+      "authorship_tag": "ABX9TyN9ZVe9McnmGs5NRcGq+SSb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "  a = a Mod b\n",
         "End While\n",
         "\n",
-        "Console.writeln(\"555 Mod 3 = {0} \", a)"
+        "Console.WriteLine(\"555 Mod 3 = {0} \", a)"
       ],
       "execution_count": null,
       "outputs": []
@@ -195,7 +195,7 @@
         "id": "WWYg-3oH7RmN"
       },
       "source": [
-        "Statement For .. Next digunakan untuk melakukan pengulangan yang jumlahnya telah ditentukan terlebih dahulu, Misal dari 1 sampai 10. Sebagai contoh untuk statment For .. Next untuk melakukan pengulangan sebanyak 10 kali adalah sebagai berikut :"
+        "Statement For .. Next digunakan untuk melakukan pengulangan yang jumlahnya telah ditentukan terlebih dahulu, Misal dari 1 sampai 10. Sebagai contoh untuk statement For .. Next untuk melakukan pengulangan sebanyak 10 kali adalah sebagai berikut :"
       ]
     },
     {
@@ -279,7 +279,7 @@
         "id": "1VW4iWbu7oNE"
       },
       "source": [
-        "Statement For Each . . Next adalah pengulangan yang dikhususkan untuk mengakses setiap element yang terdapat di dalam sekumpulan nilai tertentu (Array Maupun Koleksi ) . Proses pengulangan dilakukan dengan cara menulusuri setiap elemen yan terdapat pada suatu Array atau Koleksi dari mulai elemen pertama hingga akhir. Ketika setiap elemen telah di telusuri maka perulangan berhenti. Berikut contoh program For Each:"
+        "Statement For Each . . Next adalah pengulangan yang dikhususkan untuk mengakses setiap element yang terdapat di dalam sekumpulan nilai tertentu (Array Maupun Koleksi ) . Proses pengulangan dilakukan dengan cara menelusuri setiap elemen yang terdapat pada suatu Array atau Koleksi dari mulai elemen pertama hingga akhir. Ketika setiap elemen telah ditelusuri maka perulangan berhenti. Berikut contoh program For Each:"
       ]
     },
     {
@@ -288,9 +288,9 @@
         "id": "JxtLpMQe7vAx"
       },
       "source": [
-        "Dim Elemen() As Integer = {15, 30,40,100}\n",
+        "Dim ElemenArray() As Integer = {15, 30,40,100}\n",
         " \n",
-        "For Each nilai As Integer in Elemen\n",
+        "For Each nilai As Integer in ElemenArray\n",
         "    Console.WriteLine( nilai )\n",
         "Next\n",
         " \n",
