--- a/Instruksi_Perulangan.ipynb
+++ b/Instruksi_Perulangan.ipynb
@@ -6,7 +6,7 @@
       "name": "Instruksi Perulangan",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9ZVe9McnmGs5NRcGq+SSb",
+      "authorship_tag": "ABX9TyPVyGo0Fw8sEsOXmHSq2EHf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -312,6 +312,75 @@
         "\n",
         "[ilmukita](http://ilmukita.org/perulangan-di-vb-net/)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7VnVYD76HX5p"
+      },
+      "source": [
+        "# Praktikum - 1\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ar6PwgdsHdH_"
+      },
+      "source": [
+        "    Private Sub bProses_Click(sender As Object, e As EventArgs) Handles bProses.Click\n",
+        "        Dim teks As String\n",
+        "        Dim jumlah As Integer\n",
+        "\n",
+        "        teks = txtTeks.Text\n",
+        "        jumlah = txtJumlah.Text\n",
+        "\n",
+        "        For i = 1 To jumlah\n",
+        "            List1.Items.Add(teks)\n",
+        "        Next i\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub bKeluar_Click(sender As Object, e As EventArgs) Handles bKeluar.Click\n",
+        "        End\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub bClear_Click(sender As Object, e As EventArgs) Handles bClear.Click\n",
+        "        txtTeks.Text = \"\"\n",
+        "        txtJumlah.Text = \"\"\n",
+        "        List1.Items.Clear()\n",
+        "    End Sub\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xA0Y-jEnHofd"
+      },
+      "source": [
+        "# Praktikum - 2\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bvsoxiv_HxdE"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
