--- a/Instruksi_Perulangan.ipynb
+++ b/Instruksi_Perulangan.ipynb
@@ -6,7 +6,7 @@
       "name": "Instruksi Perulangan",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVyGo0Fw8sEsOXmHSq2EHf",
+      "authorship_tag": "ABX9TyNeZKi2BLm2n52/l3uFuC+W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,6 +331,7 @@
         "id": "ar6PwgdsHdH_"
       },
       "source": [
+        "\n",
         "    Private Sub bProses_Click(sender As Object, e As EventArgs) Handles bProses.Click\n",
         "        Dim teks As String\n",
         "        Dim jumlah As Integer\n",
@@ -364,20 +365,51 @@
       },
       "source": [
         "# Praktikum - 2\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
+        "---\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bvsoxiv_HxdE"
+        "id": "_dK4y-1ILcgn"
       },
       "source": [
-        ""
+        "\n",
+        "    Private Sub Button5_Click(sender As Object, e As EventArgs) Handles Button5.Click\n",
+        "        End\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub Button4_Click(sender As Object, e As EventArgs) Handles Button4.Click\n",
+        "        ListBox1.Items.Clear()\n",
+        "\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub Button1_Click(sender As Object, e As EventArgs) Handles Button1.Click\n",
+        "        ListBox1.Items.Clear()\n",
+        "        For i = 1 To 10\n",
+        "            ListBox1.Items.Add(\"For Next : \" & i)\n",
+        "        Next\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub Button2_Click(sender As Object, e As EventArgs) Handles Button2.Click\n",
+        "        ListBox1.Items.Clear()\n",
+        "        Dim i As Integer\n",
+        "        Do While (i <= 10)\n",
+        "            ListBox1.Items.Add(\"Do While : \" & i)\n",
+        "            i += 1\n",
+        "        Loop\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub Button3_Click(sender As Object, e As EventArgs) Handles Button3.Click\n",
+        "        ListBox1.Items.Clear()\n",
+        "\n",
+        "        Dim i As Integer = 0\n",
+        "        Do Until (i > 10)\n",
+        "            ListBox1.Items.Add(\"Do Until : \" & i)\n",
+        "            i += 1\n",
+        "        Loop\n",
+        "    End Sub\n"
       ],
       "execution_count": null,
       "outputs": []
