--- a/Array.ipynb
+++ b/Array.ipynb
@@ -6,7 +6,7 @@
       "name": "Array",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMuPaPMc9t9qkwBVn9PZUty",
+      "authorship_tag": "ABX9TyNQ3pUyk3BugTwyqyT4fNju",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -182,7 +182,35 @@
         "id": "U76zUboWE4O0"
       },
       "source": [
-        ""
+        "Public Class Form1\n",
+        "    Private Sub Form1_Load(sender As Object, e As EventArgs) Handles MyBase.Load\n",
+        "        ListView1.GridLines = True\n",
+        "        ListView1.View = View.Details\n",
+        "        ListView1.Columns.Add(\"NIM\")\n",
+        "        ListView1.Columns.Add(\"NAMA\", 115)\n",
+        "        ListView1.Columns.Add(\"PRODI\", 110)\n",
+        "        txtNIM.Text = 1\n",
+        "        txtNama.Focus()\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub bTambah_Click(sender As Object, e As EventArgs) Handles bTambah.Click\n",
+        "        Dim Arr(2) As String\n",
+        "        Arr(0) = txtNIM.Text\n",
+        "        Arr(1) = txtNama.Text\n",
+        "        Arr(2) = txtProdi.Text\n",
+        "\n",
+        "        Dim listitem As ListViewItem\n",
+        "        listitem = New ListViewItem\n",
+        "        listitem = ListView1.Items.Add(Arr(0))\n",
+        "        listitem.SubItems.Add(Arr(1))\n",
+        "        listitem.SubItems.Add(Arr(2))\n",
+        "\n",
+        "        txtNIM.Text = txtNIM.Text + 1\n",
+        "        txtNama.Text = \"\"\n",
+        "        txtProdi.Text = \"\"\n",
+        "        txtNama.Focus()\n",
+        "    End Sub\n",
+        "End Class\n"
       ],
       "execution_count": null,
       "outputs": []
