--- a/Array.ipynb
+++ b/Array.ipynb
@@ -6,7 +6,7 @@
       "name": "Array",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQ3pUyk3BugTwyqyT4fNju",
+      "authorship_tag": "ABX9TyOZWgKQCfPWwEwG/oYcJHci",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -209,6 +209,85 @@
         "        txtNama.Text = \"\"\n",
         "        txtProdi.Text = \"\"\n",
         "        txtNama.Focus()\n",
+        "    End Sub\n",
+        "End Class\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xCXK3rFvMNvR"
+      },
+      "source": [
+        "## Praktikum - 2\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0--SWIvHMRqm"
+      },
+      "source": [
+        "Public Class Form1\n",
+        "    Private Sub Form1_Load(sender As Object, e As EventArgs) Handles MyBase.Load\n",
+        "        Dim Arr(3, 1) As String\n",
+        "        Arr(0, 0) = \"NIM\"\n",
+        "        Arr(0, 1) = \"NAMA\"\n",
+        "        Arr(1, 0) = \"JENIS KELAMIN\"\n",
+        "        Arr(1, 1) = \"PRODI\"\n",
+        "        Arr(2, 0) = \"Laki-Laki\"\n",
+        "        Arr(2, 1) = \"Perempuan\"\n",
+        "        Arr(3, 0) = \"Sistem Informasi\"\n",
+        "        Arr(3, 1) = \"Komputerisasi Akuntansi\"\n",
+        "\n",
+        "        ListView1.GridLines = True\n",
+        "        ListView1.View = View.Details\n",
+        "\n",
+        "        For baris = 0 To 1\n",
+        "            For kolom = 0 To 1\n",
+        "                ListView1.Columns.Add(Arr(baris, kolom), 100)\n",
+        "            Next kolom\n",
+        "        Next baris\n",
+        "\n",
+        "        For baris = 2 To 2\n",
+        "            For kolom = 0 To 1\n",
+        "                cbKelamin.Items.Add(Arr(baris, kolom))\n",
+        "            Next kolom\n",
+        "        Next baris\n",
+        "\n",
+        "        For baris = 3 To 3\n",
+        "            For kolom = 0 To 1\n",
+        "                cbProdi.Items.Add(Arr(baris, kolom))\n",
+        "            Next kolom\n",
+        "        Next baris\n",
+        "\n",
+        "        txtNIM.Text = 1\n",
+        "        txtNAMA.Focus()\n",
+        "    End Sub\n",
+        "\n",
+        "    Private Sub bProses_Click(sender As Object, e As EventArgs) Handles bProses.Click\n",
+        "        Dim Arr(3) As String\n",
+        "        Arr(0) = txtNIM.Text\n",
+        "        Arr(1) = txtNAMA.Text\n",
+        "        Arr(2) = cbKelamin.Text\n",
+        "        Arr(3) = cbProdi.Text\n",
+        "\n",
+        "        Dim listitem As ListViewItem\n",
+        "        listitem = New ListViewItem\n",
+        "        listitem = ListView1.Items.Add(Arr(0))\n",
+        "        listitem.SubItems.Add(Arr(1))\n",
+        "        listitem.SubItems.Add(Arr(2))\n",
+        "        listitem.SubItems.Add(Arr(3))\n",
+        "        txtNIM.Text = txtNIM.Text + 1\n",
+        "        txtNAMA.Text = \"\"\n",
+        "        cbKelamin.Text = \"\"\n",
+        "        cbProdi.Text = \"\"\n",
+        "        txtNAMA.Focus()\n",
         "    End Sub\n",
         "End Class\n"
       ],
